<resources>
    <string name="app_name">MeZa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_meza">Chào mừng đến với MeZa</string>
    <string name="login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="create_new_account">Tạo tài khoản MeZa</string>
    <string name="username">Tên người dùng</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="sign_up">Đăng ký</string>
    <string name="_84">(+84)-</string>
    <string name="otp_verification">Xác thực OTP</string>
    <string name="otp_message">Nhập mã OTP được gửi đến</string>
    <string name="otp_fail_message">Không nhận được mã OTP?</string>
    <string name="resend_otp">Gửi lại mã OTP</string>
    <string name="verify">Xác thực</string>
    <string name="user_list">Danh sách người dùng</string>
</resources>