<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_to_meza"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_84"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@android:color/transparent"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:backgroundTint="@color/primary"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>