<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/message" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/otp_verification"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/otp_message"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_fail_message"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/resend_otp"
                android:textColor="@color/error"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>